--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
   "name": "token-distributor",
-  "module": "index.ts",
-  "type": "module",
   "devDependencies": {
-    "bun-types": "^0.1.0"
+    "@typechain/ethers-v5": "^10.1.0",
+    "@types/node": "^18.6.5",
+    "dotenv": "^16.0.1",
+    "ts-node": "^10.9.1",
+    "typechain": "^8.1.0",
+    "typescript": "^4.7.4"
+  },
+  "dependencies": {
+    "axios": "^0.27.2",
+    "ethers": "^5.6.9"
+  },
+  "scripts": {
+    "typechain": "typechain --target ethers-v5 --out-dir typechain './abis/*'",
+    "postinstall": "typechain",
+    "disperse": "ts-node index.ts"
   }
 }
