feat: add distributor auto-commit messages

--- a/.github/workflows/distribute.yml
+++ b/.github/workflows/distribute.yml
@@ -32,3 +32,6 @@ jobs:
 
       - name: Push Changes
         uses: actions-x/commit@v6
+        with:
+          name: "Github Actions Distributor"
+          message: "Automatic distribution"
